fixed some mobile layout issues

--- a/css/about.css
+++ b/css/about.css
@@ -22,7 +22,7 @@
 .about-nav-list {
   height: 60px;
   background-color: rgb(255, 255, 255);
-  display:flex;
+  display: flex;
   justify-content: space-evenly;
   align-items: center;
 }
@@ -39,8 +39,8 @@
   color: rgb(0, 0, 0);
   cursor: pointer;
 }
-.current{
-  background-color:  rgb(178, 216, 185);
+.current {
+  background-color: rgb(178, 216, 185);
   border-radius: 5px;
   padding: 4px 14px;
 }
@@ -63,13 +63,16 @@
   animation-name: about-Img;
   animation-duration: 2s;
   animation-iteration-count: 1;
- }
+}
 
- @keyframes about-Img {
-  0%{top: -200px;}
-  100%{top: 0px;}
+@keyframes about-Img {
+  0% {
+    top: -200px;
   }
-
+  100% {
+    top: 0px;
+  }
+}
 
 .aboutText {
   width: 48%;
@@ -82,89 +85,97 @@
   animation-name: about-text;
   animation-duration: 2s;
   animation-iteration-count: 1;
- }
-
- @keyframes about-text{
-  0%{bottom: -400px;}
-  100%{bottom: 0px;}
- 
 }
+
+@keyframes about-text {
+  0% {
+    bottom: -400px;
+  }
+  100% {
+    bottom: 0px;
+  }
+}
+
+.showList {
+  display: block !important;
+}
+
 @media (max-width: 953px) {
-  .about-nav-list{
+  .about-nav-list {
     height: 126px;
     width: 100%;
+    display: none;
     background-color: white;
-    display: block;
     text-align: center;
-    opacity: 0; 
-transition: 100ms;
-transform: translateX(600px);
-pointer-events: none;
-}
-.about-nav-list li a{
+    transition: 1000ms;
+    transform: translateX(600px);
+    pointer-events: none;
+  }
+  .about-nav-list li a {
     font-size: 13px;
     padding: 4px;
     color: black;
-}
-.aboutMenu .about-nav-list{
-    opacity: 1;
-    transition: 580ms;
+  }
+  .aboutMenu .about-nav-list {
+    transition: 1000ms;
     /* background-color: lightgray; */
     transform: translateX(0px);
     pointer-events: all;
-  
   }
-.about-burger-icon{
+
+  .about-burger-icon {
     height: 41px;
     width: 68px;
     /* border: 2px solid black; */
     position: absolute;
-    top:2%;
+    top: 2%;
     left: 82%;
-      border-radius: 5px;
+    border-radius: 5px;
     cursor: pointer;
     transition: 10ms ease-in-out;
   }
-  .line{
+  .line {
     width: 45px;
     height: 4px;
     background-color: rgb(2, 2, 2);
     /* margin:5px 2px; */
     transition: 50ms ease-in-out;
   }
-  .aLine1{
-    transform: translate(12px,10px);
+  .aLine1 {
+    transform: translate(12px, 10px);
   }
-  .aLine2{
-    transform: translate(12px,15px)
+  .aLine2 {
+    transform: translate(12px, 15px);
   }
-  .aLine3{
-    transform: translate(12px,21px)
-      /* transform:translateY(4px) */
+  .aLine3 {
+    transform: translate(12px, 21px);
+    /* transform:translateY(4px) */
   }
-  .btnClassAbout .aLine2{
-    background-color:transparent
-    
+  .btnClassAbout .aLine2 {
+    background-color: transparent;
   }
-  .btnClassAbout .aLine1{
-    transform: rotate(-45deg) translate(-1px,22px);
+  .btnClassAbout .aLine1 {
+    transform: rotate(-45deg) translate(-1px, 22px);
   }
-  .btnClassAbout .aLine3{
-    transform: rotate(45deg) translate(19px,-3px);
+  .btnClassAbout .aLine3 {
+    transform: rotate(45deg) translate(19px, -3px);
   }
-    .aboutText{
+  .aboutText {
     width: 100%;
-    }
-    .aboutImage{
-      display: none;
-    }
+  }
+
+  .aboutImage {
+    display: none;
+  }
 }
 
+
+
 .about-text-container {
-    height: 100%;
-    width: 100%;
-    background-color: #fff;
-    opacity: 0.9;
+  height: 100%;
+  width: 100%;
+  background-color: #fff;
+  opacity: 0.9;
 }
 
 .au-heading {
@@ -180,9 +191,8 @@ pointer-events: none;
   margin: 15px;
   font-size: 20px;
 }
-@media (max-width:650px) 
-{
-  .au-paragraph{
+@media (max-width: 650px) {
+  .au-paragraph {
     font-size: 13px;
   }
 }
@@ -194,7 +204,7 @@ pointer-events: none;
 .about-footer-copyright {
   text-align: center;
 }
-#footer-icon a{
-    text-decoration: none;
-    color: black;
+#footer-icon a {
+  text-decoration: none;
+  color: black;
 }
