--- a/css/contact.css
+++ b/css/contact.css
@@ -3,7 +3,8 @@
     padding: 0px;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-}.about-wrapper{
+}
+.about-wrapper{
     height:100%;
     width: 100%;
     /* background-color: rgb(119, 18, 18); */
